--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ relative_permalinks: true
 # Setup
 title:            Takenet
 tagline:          'Takenet'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+description:      'Onde o mundo de telefonia vira negócio para todos.<br>Sms Corporativo BH, mobile business, telefones celulares brasil, sms soluções'
 url:              takenet.github.io
 baseurl:          /
 
