Add members in posts and data

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -2,3 +2,12 @@
   username: ridermansb
   github: https://github.com/Ridermansb
   twitter: https://twitter.com/ridermansb
+
+- name: Guilherme Torres Castro
+  username: guitcastro
+  github: https://github.com/guitcastro
+
+- name: Gabriel Nepomuceno
+  username: GabrielBico
+  github: https://github.com/GabrielBico
+  twitter: https://twitter.com/gbico
