Add bio and photo to member

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -2,6 +2,8 @@
   username: ridermansb
   github: https://github.com/Ridermansb
   twitter: https://twitter.com/ridermansb
+  bio: Sou curioso, entusiasta e aluno na maior parte do tempo, no restante do tempo gosto de codar, já trabalhei com windows forms, web, apis e atualmente mobile Android (nativo). Gosto bastante de open source (apesar de ter contribuido com alguns poucos projetos apenas), ler e conversar sobre tecnologia.
+  photoUri: https://www.gravatar.com/avatar/02f12a5d0aff0f994bc4045893ebe925?s=128&d=identicon&r=PG
 
 - name: Guilherme Torres Castro
   username: guitcastro
